# persist-scan

./: Cargo.toml  README.md
rules/linux/: LNX_AUTOSTART_ANY.yml  LNX_AUTOSTART_SUSPICIOUS_PATH.yml  LNX_CRON_ANY.yml  LNX_CRON_SUSPICIOUS_PATH.yml
rules/windows/: WIN_RUNKEY_ANY.yml  WIN_RUNKEY_SUSPICIOUS_PATH.yml  WIN_STARTUP_ANY.yml  WIN_STARTUP_SUSPICIOUS_PATH.yml
src/: cli.rs  main.rs
src/collectors/: linux.rs  mod.rs  windows.rs
src/engine/: matcher.rs  mod.rs  report.rs  rule.rs
src/util/: paths.rs
test/: TESTING.md
